adding profile picture

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           </p>
 
    <nav class="nav"> 
-      links
+      <p>links</p>
         <ul>
           <li>
             <a 
@@ -36,7 +36,9 @@
      <aside>
       About Me
     </aside>
-
+    <img src="" alt=>
+     <!-- <img src="./assets/images/profilepic.jpg"> 
+     --></img>
     <p>
       My name is Daniel Nelson, and I am looking for a job in Web Development. Here are a few of the projects that I have put together, from very basic (my very first) to much more complex. I am gaining experience in the fullstack section; and am wanting to put my skills to the test in the Web Development field. Thanks for taking the time to peruse my selections.
     </p>
@@ -76,7 +78,7 @@
 
  
   <section class="contact" id="contact">
-    <article>Contact me</article>
+    <aside>Contact me</aside>
  
    <a href="mailto:"afredknot@gmail.com> afredknot@gmail.com</a> 
    <a href="https://www.linkedin.com/in/daniel-nelson-3440b5b1/">Linkedin</a>
