--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
      <aside>
       About Me
     </aside>
-    <img src="" alt=>
-     <!-- <img src="./assets/images/profilepic.jpg"> 
-     --></img>
+    <img alt="profile picture">
     <p>
       My name is Daniel Nelson, and I am looking for a job in Web Development. Here are a few of the projects that I have put together, from very basic (my very first) to much more complex. I am gaining experience in the fullstack section; and am wanting to put my skills to the test in the Web Development field. Thanks for taking the time to peruse my selections.
     </p>
