--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <section  id="Prework">
       <h1> My First Development Project
       <p>This is the first project I developed on my journey to becoming a web developer</p>
-       <a hfre="https://afredknot.github.io/prework-study-guide/">starting out</a>
+       <a href="https://afredknot.github.io/prework-study-guide/">starting out</a>
       </h1>
     </section>
 
