updating to add 1st group project

--- a/index.html
+++ b/index.html
@@ -49,26 +49,44 @@
   
   <main class="work" id="work">
     
-     <aside>Work</aside> 
-    
-   
-  <section  id="Prework">
-      <h1> My First Development Project
-      <p>This is the first project I developed on my journey to becoming a web developer</p>
-       <a href="https://afredknot.github.io/prework-study-guide/">starting out</a>
+     <aside class="container justify-content-center align-content-center">Work</aside> 
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 md-3 lg-5">
+   <a href="https://lindsayk82.github.io/Group-Collab-One/" style="text-decoration: none">
+  <section  id="container-main" class="col-12 md-5">
+      <h1> My First Group Development Project
+      <p>This is the first project I developed with others using agile methodology</p>
+       <!-- <a href="https://afredknot.github.io/prework-study-guide/">starting out</a> -->
       </h1>
     </section>
-
-    <section  id="code-refactor">
+   </a>
+    <section  id="container-2" class="col-12 md-3">
       <h2>Horison Code Refactor
       </h2>
       <p></p>
     </section>
 
-    <section id="css-elements">
+    <section id="container-3" class="col-12 md-3">
      <h3> Code grid for css styling
      </h3>
       <p></p>
+    </section>
+    <a href="https://afredknot.github.io/prework-study-guide/" style="text-decoration: none">
+    <section id="container-4">
+<h4>
+  My First Development Project
+      <p>This is the first project I developed on my journey to becoming a web developer</p>
+       starting out
+</h4>
+</a>
+    </section>
+
+    <section id="container-5">
+<h5>
+place holder
+</h5>
+
     </section>
 </main>
 </section>
@@ -82,6 +100,10 @@
    <a href="https://www.linkedin.com/in/daniel-nelson-3440b5b1/">Linkedin</a>
  
 </section> 
+
+</div>
+</div>
+</div>
 <footer> 
   Created by Daniel Nelson
  </footer>
