adding to t he html

--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 md-3 lg-5">
-   <a href="https://lindsayk82.github.io/Group-Collab-One/" style="text-decoration: none">
+   
   <section  id="container-main" class="col-12 md-5">
-      <h1> My First Group Development Project
-      <p>This is the first project I developed with others using agile methodology</p>
+    <a href="https://lindsayk82.github.io/Group-Collab-One/" style="text-decoration: none">
+      <h1> "Zodiac PLaylist" 
+      <p>My First Group Development Project, This is the first project I developed with others using agile methodology</p>
        <!-- <a href="https://afredknot.github.io/prework-study-guide/">starting out</a> -->
       </h1>
     </section>
@@ -75,6 +76,7 @@
     <a href="https://afredknot.github.io/prework-study-guide/" style="text-decoration: none">
     <section id="container-4">
 <h4>
+  
   My First Development Project
       <p>This is the first project I developed on my journey to becoming a web developer</p>
        starting out
