adding img to study table

--- a/index.html
+++ b/index.html
@@ -90,13 +90,16 @@
 
     
       <a href="https://secret-taiga-82685.herokuapp.com/"
-      style="text-decoration:none">
-<section id="container-5 col-12 md-3">
+      style="text-decoration: none">
+<section id="container-5" class= "col-12 md-5">
   <h5>
 Study Table
+<p>this was my final group project in my bootcamp</p>
 </h5>
-</a>
+
+
     </section>
+  </a>
 </main>
 </section>
 
